--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found | Extension Verifier</title>
+    <title>404 - Page Not Found | Verify extensions</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
