--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <title>Verify extensions - Protect Your Browser Privacy</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .cta-button {
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,7 +21,8 @@
             <a href="#features">Features</a>
             <a href="#how-it-works">How it Works</a>
             <a href="/privacy-policy">Privacy</a>
-            <a href="https://chrome.google.com/webstore" class="cta-button">Add to Chrome</a>
+            <a href="https://chromewebstore.google.com/detail/extension-verifier/majhflhllmkmghpoiidahbgklieikjnc"
+                class="cta-button">Add to Chrome</a>
         </div>
     </nav>
 
@@ -24,7 +30,8 @@
         <div class="hero-content">
             <h1>Take Control of Your Browser Extensions</h1>
             <p>Monitor permissions, detect potential threats, and protect your privacy</p>
-            <a href="https://chrome.google.com/webstore" class="cta-button">Install Now</a>
+            <a href="https://chromewebstore.google.com/detail/extension-verifier/majhflhllmkmghpoiidahbgklieikjnc"
+                class="cta-button">Install Now</a>
         </div>
     </section>
 
