open in new tab added

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             <a href="#how-it-works">How it Works</a>
             <a href="/privacy-policy">Privacy</a>
             <a href="https://chromewebstore.google.com/detail/extension-verifier/majhflhllmkmghpoiidahbgklieikjnc"
-                class="cta-button">Add to Chrome</a>
+                class="cta-button" target="_blank">Add to Chrome</a>
         </div>
     </nav>
 
@@ -31,7 +31,7 @@
             <h1>Take Control of Your Browser Extensions</h1>
             <p>Monitor permissions, detect potential threats, and protect your privacy</p>
             <a href="https://chromewebstore.google.com/detail/extension-verifier/majhflhllmkmghpoiidahbgklieikjnc"
-                class="cta-button">Install Now</a>
+                class="cta-button" target="_blank">Install Now</a>
         </div>
     </section>
 
